--- a/src/main/webapp/resources/css/add_account.css
+++ b/src/main/webapp/resources/css/add_account.css
@@ -40,10 +40,6 @@
   padding: 0;
 }
 
-.text_center{
-	text-align: center;
-}
-
 .bg-primary {
   background: rgb(255,113,31);
   background: linear-gradient(90deg, rgba(255,113,31,1) 0%, rgba(255,202,155,1) 100%);
@@ -65,6 +61,9 @@
   width: 100%;
 }
 
+.text_center{
+	text-align: center;
+}
 
 .col-sm-5 {
 	margin : 0 auto;
@@ -90,11 +89,11 @@
 }
 
 input {
-  width: 100px;
+  width: 100%;
   height: 40px;
   border-width: 1px;
+  background-color: #f7dddd;
 
-  background-color: #ffb562;
 }
 
 .carousel .slide {
